son güncellemeler yapıldı

--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
           target="_blank"
           ><i class="bi bi-linkedin"></i
         ></a>
+        <a href="https://github.com/1enesguzel" class="github" target="_blank"
+          ><i class="bi bi-github"></i
+        ></a>
         <a href="https://wa.me/905308666305" class="whatsapp" target="_blank"
           ><i class="bi bi-whatsapp"></i
         ></a>
@@ -124,10 +127,10 @@
     <main class="main">
       <!-- Hero Section -->
       <section id="hero" class="hero section dark-background">
-        <img src="assets/img/masa.jpg" alt="" data-aos="fade-in" />
+        <img src="assets/img/dündendahaiyi.jpg" alt="" data-aos="fade-in" />
 
         <div
-          class="container text-center"
+          class="container text-left"
           data-aos="fade-up"
           data-aos-delay="100"
         >
@@ -190,12 +193,12 @@
                   <ul>
                     <li>
                       <i class="bi bi-chevron-right"></i>
-                      <strong>Doğum Tarihi:</strong> <span>13 Şubat 2001</span>
+                      <strong>Doğum Tarihi:</strong> <span>13 Ocak 2001</span>
                     </li>
                     <li>
                       <i class="bi bi-chevron-right"></i>
                       <strong>Website:</strong>
-                      <span>www.enesguzel.com.tr</span>
+                      <span>www.1enesguzel.com</span>
                     </li>
                     <li>
                       <i class="bi bi-chevron-right"></i>
@@ -446,7 +449,6 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-
               <h3 class="resume-title">Eğitim</h3>
               <div class="resume-item">
                 <h4>Yüksek Lisans - Bilgisayar Mühendisliği</h4>
@@ -679,18 +681,6 @@
                 <div
                   class="info-item d-flex"
                   data-aos="fade-up"
-                  data-aos-delay="300"
-                >
-                  <i class="bi bi-phone flex-shrink-0"></i>
-                  <div>
-                    <h3>Telefon</h3>
-                    <p><a href="tel:+905308666305">+90 530 866 63 05</a></p>
-                  </div>
-                </div>
-
-                <div
-                  class="info-item d-flex"
-                  data-aos="fade-up"
                   data-aos-delay="400"
                 >
                   <i class="bi bi-envelope flex-shrink-0"></i>
@@ -699,22 +689,6 @@
                     <p>
                       <a href="mailto:enesguzel.dev@gmail.com"
                         >ensguzl0@gmail.com</a
-                      >
-                    </p>
-                  </div>
-                </div>
-
-                <div
-                  class="info-item d-flex"
-                  data-aos="fade-up"
-                  data-aos-delay="500"
-                >
-                  <i class="bi bi-whatsapp flex-shrink-0"></i>
-                  <div>
-                    <h3>WhatsApp</h3>
-                    <p>
-                      <a href="https://wa.me/905308666305" target="_blank"
-                        >Mesaj Gönder</a
                       >
                     </p>
                   </div>
@@ -745,10 +719,6 @@
             <strong class="px-1 sitename">Enes Güzel</strong>
             <span>Tüm hakları saklıdır.</span>
           </p>
-        </div>
-        <div class="credits text-center">
-          Tasarım ve geliştirme:
-          <a href="https://enesguzel.com" target="_blank">Enes Güzel</a>
         </div>
       </div>
     </footer>
